--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.4",
+    "eslint": "^8.12.0",
+    "eslint-plugin-react": "^7.29.4",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "2.6.2",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
