--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "eslint-plugin-react": "^7.29.4",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "2.6.2",
+    "sass": "^1.50.0",
+    "sass-loader": "^12.6.0",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "webpack": "^5.72.0"
+    "react-dom": "^18.0.0"
   }
 }
