--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
     "build:webpack": "webpack --config webpack.config.js",
     "build": "npm run build:babel && npx run build:webpack"
   },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "ClientApp"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ylwfleece/bpreact.git"
@@ -35,7 +45,11 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "eslint-webpack-plugin": "^3.1.1",
+    "jest": "^27.5.1",
+    "prettier-webpack-plugin": "^1.2.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "scss": "^0.2.4"
   }
 }
