--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build:babel": "babel src -d lib",
     "build:webpack": "webpack --config webpack.config.js",
     "build": "npm run build:babel && npx run build:webpack"
@@ -45,6 +45,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "eslint-webpack-plugin": "^3.1.1",
     "jest": "^27.5.1",
     "prettier-webpack-plugin": "^1.2.0",
